# rag-mcp

./: API.md  Cargo.toml  DESIGN.md  FEATURES.md  IMPLEMENTATION_NOTES.md  README.md  TESTING.md  TROUBLESHOOTING.md
.claude/: settings.json
crates/rag-chunk/: Cargo.toml
crates/rag-chunk/src/: adaptive.rs  lib.rs  recursive.rs
crates/rag-cli/: Cargo.toml
crates/rag-cli/src/: main.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: config.rs  error.rs  hlc.rs  lib.rs  traits.rs  types.rs
crates/rag-embed/: Cargo.toml
crates/rag-embed/src/: lib.rs  onnx.rs
crates/rag-mcp/: Cargo.toml
crates/rag-mcp/src/: lib.rs  server.rs
crates/rag-query/: Cargo.toml
crates/rag-query/src/: engine.rs  fusion.rs  lib.rs
crates/rag-store/: Cargo.toml
crates/rag-store/src/: lib.rs  schema.rs  sqlite.rs
crates/rag-sync/: Cargo.toml
crates/rag-sync/src/: lib.rs
crates/rag-tui/: Cargo.toml
crates/rag-tui/src/: main.rs
docs/: rag-chunk.md  rag-cli.md  rag-core.md  rag-embed.md  rag-mcp.md  rag-query.md  rag-store.md  rag-sync.md  rag-tui.md
