[package]
name = "rag-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for the RAG knowledge base"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
rag-core = { path = "../rag-core" }
rag-store = { path = "../rag-store" }
rag-embed = { path = "../rag-embed" }
rag-chunk = { path = "../rag-chunk" }
rag-query = { path = "../rag-query" }
rag-mcp = { path = "../rag-mcp" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
