[package]
name = "rag-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Search and ranking engine for rag-mcp"

[dependencies]
rag-core = { path = "../rag-core" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
